fix: fix aside z-index css rule

--- a/src/components/aside/aside.scss
+++ b/src/components/aside/aside.scss
@@ -12,4 +12,5 @@ aside {
     padding: 10px 5px;
     background-color: white;
     height: 100%;
+    z-index: 1000;
 }
